Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-248

Project wizard creates files that don't compile when using '-' in project name

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 1.3.0
    • Qt Creator 1.2.90
    • All Other Issues
    • None
    • 901239e1ea0b06c50f002d3f2d569a4367a0e4ec

    Description

      Hello, I have create the projet with name: catchcopy-api
      It have create project from template:
      #ifndef CATCHCOPYAPI_GLOBAL_H
      #define CATCHCOPYAPI_GLOBAL_H

      #include <QtCore/qglobal.h>

      #if defined(CATCHCOPY-API_LIBRARY)

      1. define CATCHCOPY-APISHARED_EXPORT Q_DECL_EXPORT
        #else
      2. define CATCHCOPY-APISHARED_EXPORT Q_DECL_IMPORT
        #endif

      #endif // CATCHCOPYAPI_GLOBAL_H

      It bug due to -.
      Thanks to fix it.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            alpha_one_x86 BRULE Herman
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes