Library wizard: Create export symbol correctly.

...if the directory contains a '-'. Export a function to generate
identifier correctly and use that.

Reviewed-by: con <qtc-committer@nokia.com>
Task-number: QTCREATORBUG-248
(cherry picked from commit 901239e1ea0b06c50f002d3f2d569a4367a0e4ec)